Allow image copying of canvas that has been transferred control

Bug: 778889
Change-Id: I34e5a47caef3a5f19b1114588566f19aaec8424c